added router and configured vscode

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,20 +2,16 @@
     "files.exclude": {
         "node_modules/": true,
         "LICENSE": true,
-        "build": true,
-        "**/*.js": {
-            "when": "$(basename).ts"
-        }
+        "public": true,
+        "dist": true
+    },
+    "files.associations": {
+        "*.js": "javascriptreact"
     },
     "editor.formatOnSave": true,
     "cSpell.words": [
-        "Segoe",
-        "antialiased",
         "browserslist",
-        "homescreen",
-        "keyframes",
-        "noopener",
-        "noreferrer",
-        "webfonts"
+        "linebreak",
+        "minified"
     ]
 }
