--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,8 +1,9 @@
 {
     "recommendations": [
-        "eg2.tslint",
-        "johnpapa.angular2",
+        "dbaeumer.vscode-eslint",
+        "drknoxy.eslint-disable-snippets",
         "msjsdiag.debugger-for-chrome",
+        "formulahendry.auto-close-tag",
         "stevencl.adddoccomments",
         "KnisterPeter.vscode-github",
         "eamodio.gitlens",
