--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
     "version": "0.0.0",
     "private": true,
     "dependencies": {
-        "react": "^16.7.0",
-        "react-dom": "^16.7.0",
-        "react-router-dom": "^4.3.1",
-        "react-scripts": "2.1.2"
+        "bootstrap": "4.2.1",
+        "react": "16.7.0",
+        "react-dom": "16.7.0",
+        "react-router-dom": "4.3.1",
+        "react-scripts": "2.1.3",
+        "reactstrap": "7.0.2"
     },
     "scripts": {
         "start": "react-scripts start",
@@ -24,6 +26,7 @@
         "not op_mini all"
     ],
     "devDependencies": {
-        "eslint-plugin-react": "^7.12.3"
+        "@types/reactstrap": "6.4.4",
+        "eslint-plugin-react": "7.12.3"
     }
 }
