added header, footer and sidenav

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,10 +15,19 @@
     "files.trimTrailingWhitespace": true,
     "files.trimFinalNewlines": true,
     "cSpell.words": [
+        "Calibri",
+        "HRMS",
         "Sidenav",
         "browserslist",
+        "dropdown",
         "linebreak",
         "minified",
-        "reactstrap"
+        "noopener",
+        "noreferrer",
+        "primeicons",
+        "primereact",
+        "reactstrap",
+        "sangam",
+        "zindex"
     ]
 }
