--- a/package.json
+++ b/package.json
@@ -4,10 +4,14 @@
     "private": true,
     "dependencies": {
         "bootstrap": "4.2.1",
+        "classnames": "2.2.6",
+        "primeicons": "1.0.0",
+        "primereact": "^3.0.0-rc.1",
         "react": "16.7.0",
         "react-dom": "16.7.0",
         "react-router-dom": "4.3.1",
         "react-scripts": "2.1.3",
+        "react-transition-group": "2.5.3",
         "reactstrap": "7.0.2"
     },
     "scripts": {
