added article jsx

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -27,6 +27,7 @@
             "error",
             "windows"
         ],
+        "react/prop-types": 0,
         "quotes": [
             "error",
             "single"
