--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,13 +17,16 @@
     "cSpell.words": [
         "Calibri",
         "HRMS",
+        "POCs",
         "Sidenav",
         "browserslist",
         "dropdown",
+        "inputtext",
         "linebreak",
         "minified",
         "noopener",
         "noreferrer",
+        "primeflex",
         "primeicons",
         "primereact",
         "reactstrap",
