--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
     "dependencies": {
         "bootstrap": "4.2.1",
         "classnames": "2.2.6",
+        "primeflex": "1.0.0-rc.1",
         "primeicons": "1.0.0",
-        "primereact": "^3.0.0-rc.1",
+        "primereact": "3.0.0-rc.1",
         "react": "16.7.0",
         "react-dom": "16.7.0",
         "react-router-dom": "4.3.1",
