--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -9,6 +9,9 @@
         "eamodio.gitlens",
         "donjayamanne.githistory",
         "streetsidesoftware.code-spell-checker",
-        "joshpeng.sublime-babel-vscode"
+        "joshpeng.sublime-babel-vscode",
+        "hnw.vscode-auto-open-markdown-preview",
+        "zignd.html-css-class-completion",
+        "michelemelluso.code-beautifier"
     ]
 }
