--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,7 @@
 {
     "files.exclude": {
-        "node_modules/": true,
+        "node_modules": true,
         "LICENSE": true,
-        "public": true,
         "dist": true
     },
     "files.associations": {
@@ -21,6 +20,7 @@
         "Sidenav",
         "browserslist",
         "dropdown",
+        "homescreen",
         "inputtext",
         "linebreak",
         "minified",
@@ -31,6 +31,8 @@
         "primereact",
         "reactstrap",
         "sangam",
+        "treeview",
+        "webfonts",
         "zindex"
     ]
 }
