--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
         "primeflex": "1.0.0-rc.1",
         "primeicons": "1.0.0",
         "primereact": "3.0.0-rc.1",
+        "prop-types": "15.6.2",
         "react": "16.7.0",
         "react-dom": "16.7.0",
         "react-router-dom": "4.3.1",
-        "react-scripts": "2.1.3",
         "react-transition-group": "2.5.3",
         "reactstrap": "7.0.2"
     },
@@ -31,7 +31,9 @@
         "not op_mini all"
     ],
     "devDependencies": {
+        "@types/react-router-dom": "4.3.1",
         "@types/reactstrap": "6.4.4",
-        "eslint-plugin-react": "7.12.3"
+        "eslint-plugin-react": "7.12.3",
+        "react-scripts": "2.1.3"
     }
 }
