--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,7 @@
     "files.associations": {
         "*.js": "javascriptreact"
     },
+    "javascript.implicitProjectConfig.checkJs": true,
     "editor.formatOnSave": true,
     "editor.tabSize": 4,
     "editor.insertSpaces": true,
