--- a/package.json
+++ b/package.json
@@ -4,16 +4,10 @@
     "private": true,
     "dependencies": {
         "bootstrap": "4.2.1",
-        "classnames": "2.2.6",
-        "primeflex": "1.0.0-rc.1",
-        "primeicons": "1.0.0",
-        "primereact": "3.0.0-rc.1",
         "prop-types": "15.6.2",
         "react": "16.7.0",
         "react-dom": "16.7.0",
-        "react-router-dom": "4.3.1",
-        "react-transition-group": "2.5.3",
-        "reactstrap": "7.0.2"
+        "react-router-dom": "4.3.1"
     },
     "scripts": {
         "start": "react-scripts start",
@@ -31,8 +25,8 @@
         "not op_mini all"
     ],
     "devDependencies": {
+        "@types/react": "17.0.3",
         "@types/react-router-dom": "4.3.1",
-        "@types/reactstrap": "6.4.4",
         "eslint-plugin-react": "7.12.3",
         "react-scripts": "2.1.3"
     }
