--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,13 +1,15 @@
 {
     "recommendations": [
-        "eg2.tslint",
-        "johnpapa.angular2",
+        "dbaeumer.vscode-eslint",
+        "drknoxy.eslint-disable-snippets",
         "msjsdiag.debugger-for-chrome",
+        "formulahendry.auto-close-tag",
         "stevencl.adddoccomments",
         "KnisterPeter.vscode-github",
         "eamodio.gitlens",
         "donjayamanne.githistory",
         "streetsidesoftware.code-spell-checker",
-        "joshpeng.sublime-babel-vscode"
+        "hnw.vscode-auto-open-markdown-preview",
+        "zignd.html-css-class-completion"
     ]
 }
