--- a/package.json
+++ b/package.json
@@ -1,25 +1,33 @@
 {
-  "name": "my-app",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "react": "^16.7.0",
-    "react-dom": "^16.7.0",
-    "react-scripts": "2.1.2"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ]
+    "name": "my-app",
+    "version": "0.0.0",
+    "private": true,
+    "dependencies": {
+        "bootstrap": "4.2.1",
+        "prop-types": "15.6.2",
+        "react": "16.7.0",
+        "react-dom": "16.7.0",
+        "react-router-dom": "4.3.1"
+    },
+    "scripts": {
+        "start": "react-scripts start",
+        "build": "react-scripts build",
+        "test": "react-scripts test",
+        "eject": "react-scripts eject"
+    },
+    "eslintConfig": {
+        "extends": "react-app"
+    },
+    "browserslist": [
+        ">0.2%",
+        "not dead",
+        "not ie <= 11",
+        "not op_mini all"
+    ],
+    "devDependencies": {
+        "@types/react": "17.0.3",
+        "@types/react-router-dom": "4.3.1",
+        "eslint-plugin-react": "7.12.3",
+        "react-scripts": "2.1.3"
+    }
 }
